wwr/styles/rafting.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

:root {
    --primary-color: #363538;
    --secondary-color: #8D8C8A;
    --accent1-color: #408697;
    --accent2-color: #CF8B64;

    --heading-font: "lato", sans-serif;
    --paragraph-font: "lato", sans-serif;

    --nav-background-color: #408697;
    --nav-link-color: #3A3634;
    --nav-hover-link-color: #ffffff;
    --nav-hover-background-color: #363538;
}

/* Add css grid to enhance the layout 1-Feb-24 */

header {
    display: grid;
    grid-template-columns: 1fr 3fr;
    align-items: center;
    max-width: 940px;
    background-color: var(--accent1-color);

}

header img {
    margin: 0 1rem 0 3rem;
    padding: 2px;
    width: 100px;
    height: auto;
    
}

p {
    padding: 25px;
}

body {
    font-family: var(--paragraph-font);
    max-width: 800px;
    padding: 20px;
    margin: 0 auto;
}
h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

nav {
    width: 100%;
    font-size: 1.2rem;  
    display: flex;
    justify-content: space-evenly;
    
}

nav a {
    width: 25%;
    display: block;
    color: var(--nav-hover-link-color);
    text-decoration: none;
    font-weight: 700;
    padding: 5px;
    text-align: center;

}


nav a:link, nav a :visited {
    color: var(--nav-hover-link-color);
}
nav a:hover {
    color: var(--nav-hover-link-color);
    background-color: var(--nav-hover-background-color);
    transition: .6s;
}


main {
    max-width: 840px;
    display: grid;
}

.hero {
    position:relative;
    margin: 10px auto;
    
}

.hero > img {
    display: block;
    width: 100%;
    height: auto;
    margin-bottom: 5px;
    text-align: center;
}
 
article {
    position: absolute;
    margin: 0 auto;
    right: 11%;
    width: 75%;
    height: 45%;
    background: rgba(7, 38, 49, 0.6);
    border: 1px solid rgb(0, 0, 0, 0);
    top: 57px;
    overflow: hidden;
}

article img {
    float: right;
    width: 20%;
    margin: 0.3rem 5%;
    box-shadow: 0 0 30px gray;
    border: 2px solid #ffffff;

}

article p {
    margin: -10px auto;
    
    text-align: left;
    font-style: italic;
    color: #ffffff;
    
}


h1 {
    position: absolute;
    width: 100%;
    text-align: center;
    background: rgba(236, 110, 38, 0.6);
    margin-top: 0;
    top: 15px;
    color: #ffffff;   
}

.history {
    display: grid;
    grid-template-rows: auto auto;
    grid-gap: 3px; /* Adjust as needed */
    margin-bottom: 10px;
    padding: 5px;
    background-color: rgba(236, 110, 38, 0.1);

  }
  
 
.history img {
    grid-area: 1 / 2;
    width: 90%;
    margin: 2.5rem 2px 2px 2px;
    left: 10px;
    padding: 5px;
    border: 4px solid rgba(236, 110, 38, 0.6);
    box-shadow: 0 0 30px gray;

}
.history p {
    grid-row: 1;
    padding: 10px;
    margin-top: 25px;
    font-size: .875rem;
}
.history h2 {
    grid-column: 2;
    grid-row: 1;
    text-align: center;
    margin-top: 0.3rem;
    font-size: 1.7rem;
}
.advencontainer {
    margin: 4px;
    padding: 5px;
    justify-content: center;
    text-align: center;
    background: rgba(236, 110, 38, 0.6);
}
.advencontainer h2 {
    margin: 0 auto;
    
}

.gallery {
    display: flex;
    font-size: x-small;
    font-style: italic; 
}
div.gallery img {
    width: 100%;
    margin: 0 auto;
    border: 3px solid #ffffff;
    
  }

.set-image {
    margin: 0 auto;
    padding: 13px;
    width: 100%;
    transition: transform .4s;
  }
  .set-image:hover {
    transform: scale(1.1);
  }


footer {
    display: grid;
    grid-template-columns: 4fr 1fr;
    text-align: center;
    margin-top: 10px;
    background-color: var(--accent1-color);
    color: #ffffff;
    font-size: .995rem;
}

.sociallinks {
    display: flex;
    justify-content: end;
    align-items: center;
    margin-right: 2px;
}
.sociallinks a:hover {
    background-color: rgba(0,0,0,0.0);
    transition: transform .2s;
    transform: scale(1.5);
}

/* Contact Us css page */
/* our team css code */
.teaminfo {
    background-color: rgba(236, 110, 38, 0.1);
    padding: 10px;
}
.teaminfo > h2 {
    color: var(--nav-background-color);
    margin: 5px;
    margin-left: 10px;

}
.employee {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    padding: 5px;
    margin: 5px;
    
}
.our-team {
    padding: 30px 0 40px;
    margin: 10px;
    margin-bottom: 30px;
    background-color: var(--accent2-color);
    text-align: center;
    overflow: hidden;
    position: relative;
    
  }
  
  .our-team .picture {
    display: inline-block;
    height: 130px;
    width: 130px;
    margin-bottom: 50px;
    z-index: 1;
    position: relative;
    
  }
  
  .our-team .picture::before {
    content: "";
    width: 100%;
    height: 0;
    border-radius: 50%;
    background-color: var(--accent1-color);
    position: absolute;
    bottom: 135%;
    right: 0;
    left: 0;
    opacity: 0.9;
    transform: scale(3);
    transition: all 0.3s linear 0s;
  }
  
  .our-team:hover .picture::before {
    height: 100%;
  }
  
  .our-team .picture::after {
    content: "";
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: var(--accent1-color);
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
  }
  
  .our-team .picture img {
    width: 100%;
    height: auto;
    border-radius: 50%;
    transform: scale(1);
    transition: all 0.9s ease 0s;
  }
  
  .our-team:hover .picture img {
    box-shadow: 0 0 0 14px #f7f5ec;
    transform: scale(0.7);
  }
  .team-content .name {
    color: black;
    margin: 3px;
  }
  .our-team .title {
    display: block;
    font-size: 15px;
    color: var(--primary-color);
    text-transform: capitalize;
  }
  
  .our-team .social {
    width: 100%;
    padding: 0;
    margin: 0;
    background-color: var(--accent1-color);
    position: absolute;
    bottom: -100px;
    left: 0;
    transition: all 0.5s ease 0s;
  }
  
  .our-team:hover .social {
    bottom: 0;
    
  }
  
  .our-team .social li {
    display: inline-block;
  }
  
  .our-team .social li a {
    display: block;
    padding: 10px;
    font-size: 17px;
    color: white;
    transition: all 0.3s ease 0s;
    text-decoration: none;
  }
  
  .our-team .social li a:hover {
    color: var(--accent1-color);
    background-color: #f7f5ec;
    
  }

  /* form css style */
  .contactform {
    width: 800px;
    background-color: rgba(225, 222, 222, 0.1);
    margin: 0 auto;
    margin-bottom: 1px;
  }
.contact img {
    display: grid;
    grid-column: 2 / span 3;
    grid-row: 1 / span 2;
    width: 50%;
    margin: 0 auto;
    margin-top: 5px;
    border: 4px solid var(--accent2-color);
    box-shadow: 0 0 30px gray;
}
  form {
    width: 650px;
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 1rem;
    background-color: rgba(26, 11, 3, 0.1);
    display: grid;
}
fieldset {
    display: grid;
    grid-gap: .8rem;
    margin: 1rem;
    border: 1px solid var(--accent1-color);
    padding: 1rem;
}

legend {
    padding: 0.5rem;
    color: var(--accent1-color);
    font-size: 2.1em;
}
label, input, button, select, textarea {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
label {
    text-align: left;
    padding-right: 1rem;
}

input, select, textarea {
    padding: 0.25rem;
    font-size: 0.9rem;
}
textarea {
    
}

.activity {
    
    margin-bottom: 10px;
}
.activity h4 {
    margin-left: 2px;
    margin-bottom: 5px;
}
textarea {
    width: 400px;
}
.country {
    margin-top: 10px;
    
}
select {
    width: fit-content;
}

button {
    margin: 1rem;
    background-color: var(--accent1-color);
    width: 70%;
    margin: 0 auto;
    color: #fff;
    border: none;
    border-radius: .5rem;
    padding: .75rem;
    font-size: 1.2rem;
}
button:hover {
    background-color: rgba(161, 74, 23, 0.8); 
}
/* contact information */
.contact {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: auto;
    padding: 10px;
    background-color: rgba(236, 110, 38, 0.1);
  }
.contact h2 {
    margin: 5px 15px;
    padding-left: 15px;

}
.contact p {
    margin: 4px;
    padding-top: 5px;
    grid-row: 2;
}

.raftingcontact {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    background: rgba(236, 110, 38, 0.6);
    margin-bottom: 20px;
    
}
.infocontact {
    grid-column: 1;
    margin: 25px 20px;
}
.infocontact h4 {
    margin: 0 auto;
    color: #000;
    padding: 4px;
    border-bottom: 2px solid black;
}
.infocontact > p {
    margin: 0 auto;
    color: #000;
    padding: 4px;
}
.gmap {
    grid-column: 2;
    margin: 15px;
    
    
}
.gmap iframe {
    width: 90%;
    height: auto;
    margin-right: 35px;
    border: 3px solid #408697;
    box-shadow: 0 0 30px gray;
}

